# L3ROcc

./: .gitignore  README.md  episode_00000_view.csv  episode_00001_view.csv  pyproject.toml  requirements.txt  requirements_visual.txt  vln_env.py
L3ROcc/: base.py  utils.py
L3ROcc/configs/: config.yaml
L3ROcc/dataset/: intern_nav_adapter.py
L3ROcc/generater/: intern_vln_env.py  normal_data_vln_env.py
data/examples/small_vln_n1/traj_data/matterport3d_zed/1LXtFkjw3qL/trajectory_1/data/chunk-000/: all_occ.npz  episode_000000.parquet  path.ply
data/examples/small_vln_n1/traj_data/matterport3d_zed/1LXtFkjw3qL/trajectory_1/meta/: episodes.jsonl  episodes_stats.jsonl  info.json  tasks.jsonl
intern_nav_occ/: intern_nav_adapter.py  intern_vln_env.py  run_intern_nav_occ.py  vln_occ.py
occ/: base.py  config.yaml  globals.py  test.py  utils.py  visual.py
occ/generater/: intern_vln_env.py  normal_data_vln_env.py
pi3/utils/: basic.py
tools/: calc_scene_bounds.py  parquet2csv.py  run_intern_nav_occ.py  run_normal_data_occ.py  viusal_npz.py
tools/visual/: npy_to_occ_video.py  visual_simple_frame_npz.py
utils/: parquet2csv.py
utils/benchmark/: benchmark_loading.py  benchmark_restore.py  benchmark_slice.py
utils/calc/: calc_mask.py
utils/video/: npy_to_world_video.py
utils/visual/: npy_to_occ_video.py  npy_to_world_video.py  video_composer_to_2.py  video_composer_to_3.py  visual_simple_frame_npy.py  visual_simple_frame_npz.py
(+1 files in other folders)
