[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "L3ROcc"
version = "0.1.0"
description = "Physics-Informed 4D Occupancy Generation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Binling Huang", email = "binlinghuang3388@gmail.com"},
  {name = "Nianjin Ye", email = "yenianjin@gmail.com"}
]
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "numpy==1.26.4",
    "pillow",
    "opencv-python",
    "plyfile",
    "huggingface_hub",
    "safetensors",
    "Open3D==0.19.0",
    "pyarrow==23.0.0",
]

[tool.setuptools.packages.find]
where = ["."]  
include = ["L3ROcc*"]